# metaharness

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUBMISSIONS.md  audit.toml  deny.toml  package-lock.json  package.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  draco.yml  pages-monitor.yml  pages.yml  publish.yml  published-smoke.yml  real-tools.yml  security.yml
__tests__/: agent-harness-generator-lib.test.ts  bench-baseline.test.ts  dev-toolkit.test.ts  e2e-scaffold-validate.test.ts  examples-education.test.ts  examples-quickstart.test.ts  harness-compare.test.ts  harness-diag.test.ts  harness-genome.test.ts  harness-sbom-audit.test.ts  healthcheck.test.ts  metaharness-subcommands.test.ts  openharness-subcommands.test.ts  path-handling.test.ts  release-notes.test.ts  witness-tamper.test.ts  workflows.test.ts
__tests__/integration/: host-functional.test.ts
apps/web-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
apps/web-ui/src/: App.tsx  (+1 more)
crates/kernel/: Cargo.toml  build.rs
crates/kernel-napi/: Cargo.toml  package.json
crates/kernel-napi/src/: lib.rs
crates/kernel-wasm/: Cargo.toml
crates/kernel-wasm/src/: lib.rs
crates/kernel/benches/: mcp_validate.rs  witness_canon.rs
crates/kernel/src/: claims.rs  cost.rs  dispatch.rs  hooks.rs  intel.rs  lib.rs  mcp.rs  memory.rs  routing.rs  witness.rs
crates/poker-darwin/: Cargo.toml  README.md
crates/poker-darwin/benches/: cfr_bench.rs
crates/poker-darwin/src/: abstraction.rs  cfr.rs  darwin.rs  exploit.rs  features.rs  game.rs  lib.rs  neural.rs  optimize.rs  realgames.rs  rng.rs
crates/poker-darwin/src/games/: holdem.rs  kuhn.rs  leduc.rs  mod.rs
crates/poker-darwin/tests/: convergence.rs
crates/template-catalog/: Cargo.toml
crates/template-catalog/src/: lib.rs
docs/: LOOP_WORKER.md  SOTA_HORIZON.md  USAGE.md  USERGUIDE.md
docs/adrs/: ADR-020-web-generator-ui.md  ADR-021-client-side-packaging-and-pages-deploy.md  ADR-022-mcp-primitive.md  ADR-025-browser-embeddings-minilm.md  ADR-026-cli-repo-analyzer-ruvllm.md  ADR-027-cli-and-web-ui-integration.md  ADR-034-oia-integration.md  ADR-035-product-naming.md  ADR-038-draco-beyond-sota-ruflo-components.md  ADR-040-adaptive-cost-optimal-routing.md  ADR-041-metaharness-as-program-synthesis.md  ADR-042-beta-feedback-credibility-reconciliation.md  ADR-043-router-training-pipeline.md  ADR-044-algorithmic-agent-harness.md  ADR-044-live-llm-host-verification-and-capability-coverage.md  ADR-045-cli-scaffold-host-adapter-wiring.md  ADR-046-real-install-host-verification.md  ADR-051-third-party-sdk-showcase-examples.md  ADR-052-example-aws.md  ADR-053-example-gcp.md  ADR-054-example-azure.md  ADR-055-example-stripe.md  ADR-056-example-slack.md  ADR-057-example-github.md  ADR-058-example-twilio.md  ADR-059-example-datadog.md  ADR-060-example-supabase.md  ADR-061-example-huggingface.md  ADR-062-example-pinecone.md  ADR-063-example-fhir.md  ADR-064-example-ads.md  ADR-065-example-web3.md  ADR-066-example-iot.md  ADR-067-example-nasa.md  ADR-068-example-qiskit.md  ADR-069-example-bio.md  ADR-083-host-eve-production-runtime.md  ADR-084-darwin-self-reflection-failure-driven-mutation.md  ADR-089-darwin-crossover-recombination.md  ADR-090-darwin-sgm-risk-budget-in-evolve.md  (+67 more)
docs/research/: 2026-06-21-self-learning-wasm-memory-escalator.md  SAKANA_FUGU_REVERSE_ENGINEERING.md
examples/: README.md
examples-packages/: GISTS.md  README.md
examples-packages/example-ads/: README.md  package.json
examples-packages/example-aws/: README.md  package.json
examples-packages/example-azure/: README.md  package.json
examples-packages/example-bio/: README.md  package.json
examples-packages/example-datadog/: README.md  package.json
examples-packages/example-fhir/: README.md  package.json
examples-packages/example-gcp/: README.md  package.json
examples-packages/example-github/: README.md  package.json
examples-packages/example-huggingface/: README.md  package.json
examples-packages/example-iot/: README.md  package.json
examples-packages/example-nasa/: README.md  package.json
examples-packages/example-pinecone/: README.md  package.json
examples-packages/example-qiskit/: README.md  package.json
examples-packages/example-slack/: README.md  package.json
examples-packages/example-stripe/: README.md  package.json
examples-packages/example-supabase/: README.md  package.json
scripts/: bench-baseline.mjs  build-ordered.mjs  dev-toolkit.mjs  gcp-bfcl-runner.sh  gcp-cluster.mjs  gcp-frames-runner.sh  gcp-frames-sweep-runner.sh  gcp-perinstance-runner.sh  gcp-swebench-runner.sh  healthcheck.mjs  install-all.mjs  native-router-guard.mjs  nightly-sota-review.mjs  pack-all.mjs  pareto-from-firestore.mjs  path-guard.mjs  pro-prepull-images.sh  release-notes.mjs  release.mjs  smoke.mjs  verify-all-hosts.mjs  verify-harness-live.mjs
unknown-thing-not-a-verb/: CLAUDE.md  README.md  package.json
(+181 files in other folders)
