[package]
name = "ruflo-kernel-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for ruflo-kernel"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ruflo-kernel = { path = "../kernel" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-mutable-globals"]
